--- a/SYS320-SP22/Week05/homework/attacks.yaml
+++ b/SYS320-SP22/Week05/homework/attacks.yaml
@@ -1,5 +1,49 @@
 ---
 query_reg:
-  security_packages: ".*HKLM\\\\SYSTEM\\\\CurrentControlSet\\\\Control\\\\Lsa\\\\\\.*Security Packages.*"
-  notification_packages: ".*HKLM\\\\SYSTEM\\\\CurrentControlSet\\\\Control\\\\Lsa\\\\.*Notification Packages.*"
-  authentication_packages: ".*HKLM\\\\SYSTEM\\\\CurrentControlSet\\\\Control\\\\Lsa\\\\.*Authentication Packages.*"
+  description: "The Windows Registry stores configuration information that can be used by the system or other programs. Adversaries may query the Registry looking for credentials and passwords that have been stored for use by other programs or services. Sometimes these credentials are used for automatic logons. Adversaries could also inject malicious DLLs into registry keys that are loaded after reboot. When a user authenticates the DLLs have a routine that captures their credentials after login."
+  HKLM: ".*HKLM\\\\SYSTEM\\\\CurrentControlSet\\\\Control\\\\Lsa\\\\.*"
+  security_packages: ".*Security Packages.*"
+  notification_packages: ".*Notification Packages.*"
+  authentication_packages: ".*Authentication Packages.*"
+scripts_running:
+  description: "Adversaries may use scripts to aid in operations and perform multiple actions that would otherwise be manual. Scripting is useful for speeding up operational tasks and reducing the time required to gain access to critical resources. Some scripting languages may be used to bypass process monitoring mechanisms by directly interacting with the operating system at an API level instead of calling other programs. Common scripting languages for Windows include VBScript and PowerShell but could also be in the form of command-line batch scripts."
+  msta: ".*mshta.*"
+  hta: ".*.hta"
+  vbscript: ".*vbscript.*"
+  about: ".*about.*"
+  javascript: ".*javascipt.*"
+  regHead: ".*regHead.*"
+  wscript.Shell: ".*wscript.Shell.*"
+  cscript: ".*cscipt.*"
+  jscript: ".*jscript.*"
+  sscript: ".*sscript.*"
+  Regsvr32: ".*Regsvr32.*"
+powershell:
+  description: "PowerShell is a powerful interactive command-line interface and scripting environment included in the Windows operating system. Adversaries can use PowerShell to perform a number of actions, including discovery of information and execution of code. Examples include the Start-Process cmdlet which can be used to run an executable and the Invoke-Command cmdlet which runs a command locally or on a remote computer."
+  powershell.exe: ".*powershell.exe.*"
+  powershell: ".*powershell.*"
+  ps1: ".*ps1.*"
+  psm1: ".*psm1.*"
+  PSLockdownPolicy: ".*PSLockdownPolicy.*"
+  ExecutionContext.SessionState.LanguageMode: ".*ExecutionContext.SessionState.LanguageMode.*"
+  Net.WebClient: ".*Net.WebClient:.*"
+  iex: ".*iex.*"
+  Invoke-: ".*Invoke-.*"
+  TOKEN_IMPERSONATE: ".*TOKEN_IMPERSONATE.*"
+  TOKEN_DUPLICATE: ".*TOKEN_DUPLICATE.*"
+  TOKEN_ADJUST_PRIVILEGES: ".*TOKEN_ADJUST_PRIVILEGES.*"
+  TOKEN_PRIVILEGES: ".*TOKEN_PRIVILEGES.*"
+  GetDelegateForFunctionPointer: ".*GetDelegateForFunctionPointer.*"
+  System.Reflection.AssemblyName: ".*System.Reflection.AssemblyName.*"
+  System.Reflection.Emit.AssemblyBuilderAccess: ".*System.Reflection.Emit.AssemblyBuilderAccess.*"
+  System.MulticastDelegate: ".*System.MulticastDelegate.*"
+  System.Reflection.CallingConventions: ".*System.Reflection.CallingConventions.*"
+  Get-GPPPassword: ".*Get-GPPPassword.*"
+  System.Security.Cryptography.AesCryptoServiceProvider: ".*System.Security.Cryptography.AesCryptoServiceProvider.*"
+  0x4e,0x99,0x06,0xe8,0xfc,0xb6,0x6c,0xc9,0xfa,0xf4: ".*0x4e,0x99,0x06,0xe8,0xfc,0xb6,0x6c,0xc9,0xfa,0xf4.*"
+  Groups.User.Properties.cpassword: ".*Groups.User.Properties.cpassword.*"
+  ScheduledTasks.Task.Properties.cpassword: ".*ScheduledTasks.Task.Properties.cpassword.*"
+  System.Management.Automation.WindowsErrorReporting: ".*System.Management.Automation.WindowsErrorReporting.*"
+  Out-MiniDump: ".*Out-MiniDump.*"
+  MiniDumpWriteDump: ".*MiniDumpWriteDump.*"
+  ExecutionPolicyPSRemoting: ".*ExecutionPolicyPSRemoting.*"
